--- a/src/app/accident-type/accident-type.component.html
+++ b/src/app/accident-type/accident-type.component.html
@@ -20,7 +20,7 @@
       </thead>
       <tbody>
       <tr class="accidentType-list-item" *ngFor="let accidentType of accidentTypes"
-          [routerLink]="['/accidentTypes', accidentType.id]">
+          [routerLink]="['/accidentTypes', accidentTypes.id]">
         <th class="accidentType-list-item-column">{{accidentType.name_type_accident}}</th>
         <th class="accidentType-list-item-column">{{accidentType.code_type_accident}}</th>
       </tr>
@@ -45,12 +45,8 @@
           class="glyphicon glyphicon-chevron-left"></span>Cancel
         </button>
         <button type="submit" class="btn btn-success" [disabled]="isInvalidForm()">Submit</button>
-
       </div>
-
   </div>
-
-
 </div>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
