--- a/src/app/accident-cause-group/accident-cause-group.component.html
+++ b/src/app/accident-cause-group/accident-cause-group.component.html
@@ -1,6 +1,6 @@
 <div class="col col-lg-1"></div>
 <div class="col col-lg-10">
-  <h1 class="accident-title ">Lista de Accidentes</h1>
+  <h1 class="accident-title ">causas del Accidente</h1>
 
     <div *ngFor="let accidentCauseGroup of accidentCauseGroups">
       <h2>{{accidentCauseGroup.title}}</h2><br>
