--- a/src/app/detail-assign-equipment/detail-assign-equipment.component.html
+++ b/src/app/detail-assign-equipment/detail-assign-equipment.component.html
@@ -1,62 +1,63 @@
-<p>
-  detail-assign-equipment works!
-</p>
+<div class="container" fxLayout="column">
+  <div fxFlex>
+    <mat-card class="precont">
+      <form #detAssignEqForm="ngForm" (ngSubmit)="save(detAssignEqForm.value)">
+
+        <mat-card-header class="t-header">
+          <mat-card-title><h1>{{detAssignEquip.id ? 'EDIT' : 'ADD'}} EQUIPMENTS TO EMPLOYEE</h1></mat-card-title>
+        </mat-card-header>
+
+        <h2>EMPLOYEE: {{assignEquip.nameEmployee}}<span> </span>{{assignEquip.lastnameEmployee}} </h2>
+
+        <mat-card-content>
+          <div class="fieldRow">
+            <input type="hidden" name="id" [(ngModel)]="detAssignEquip.id">
+
+            <mat-form-field class="hidden">
+              <mat-select placeholder="Asignacion" [(ngModel)]="selectedOption" name="idAssignEquip" #idAssignEquip="ngModel" required>
+                <mat-option [value]="assignEquip.id">{{assignEquip.id}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+
+            <mat-form-field>
+              <mat-select placeholder="Equipment" [(ngModel)]="detAssignEquip.idEquipment" name="idEquipment" #idEquipment="ngModel" required>
+                <mat-option>None</mat-option>
+                <mat-option *ngFor="let equipment of equipments" [value]="equipment.id">
+                  {{equipment.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <!--<div class="fieldRow">
+            <input type="hidden" name="id" [(ngModel)]="detAssignEquip.id">
+
+            <mat-selection-list #list>
+              <mat-list-option *ngFor="let equipment of equipments" [selected]="equipment.selected" (click)="onAreaListControlChanged(list)" [value]="equipment.id">
+                {{equipment.name}}
+              </mat-list-option>
+            </mat-selection-list>
+
+            <p>
+              Options selected: {{equipments.selectedOptions.selected.length}}
+              Selected: {{ selectedOptions | json }}
+            </p>
+
+          </div>-->
+
+        </mat-card-content>
 
 
-<mat-card>
-  <form #detAssignEqForm="ngForm" (ngSubmit)="save(detAssignEqForm.value)">
-    <mat-card-header>
-      <mat-card-title><h2>{{detAssignEquip.id ? 'Edit' : 'Add'}} Asignación de Equipos de Construcción</h2></mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="fieldRow">
-        <input type="hidden" name="id" [(ngModel)]="detAssignEquip.id">
+        <mat-card-actions>
+          <button mat-raised-button color="primary" type="submit"
+                  [disabled]="!detAssignEqForm.form.valid">Save</button>
+          <button mat-raised-button (click)="remove(detAssignEquip.id)" color="secondary"
+                  *ngIf="detAssignEquip.id" type="button">Delete</button>
+          <button mat-raised-button (click)="gotoListViewDetail()" color="secondary">Cancel</button>
 
-        <mat-selection-list #constrEquipments>
-          <mat-list-option *ngFor="let constEq of conEquipments">
-            {{constEq}}
-          </mat-list-option>
-        </mat-selection-list>
+        </mat-card-actions>
+      </form>
+    </mat-card>
 
-        <p>
-          Options selected: {{constrEquipments.selectedOptions.selected.length}}
-        </p>
-
-      </div>
-
-    </mat-card-content>
-
-    <mat-card-content>
-      <div class="fieldRow">
-        <input type="hidden" name="id" [(ngModel)]="detAssignEquip.id">
-
-        <mat-selection-list #machines>
-          <mat-list-option *ngFor="let machine of machEquipments">
-            {{machine}}
-          </mat-list-option>
-        </mat-selection-list>
-      </div>
-    </mat-card-content>
-
-    <mat-card-content>
-      <div class="fieldRow">
-        <input type="hidden" name="id" [(ngModel)]="detAssignEquip.id">
-
-        <mat-selection-list #securityEquipments>
-          <mat-list-option *ngFor="let secEq of secEquipments">
-            {{secEq}}
-          </mat-list-option>
-        </mat-selection-list>
-
-      </div>
-
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit"
-              [disabled]="!detAssignEqForm.form.valid">Save</button>
-      <button mat-raised-button (click)="remove(detAssignEquip.id)" color="secondary"
-              *ngIf="detAssignEquip.id" type="button">Delete</button>
-      <a mat-button (click)="gotoList()">Cancel</a>
-    </mat-card-actions>
-  </form>
-</mat-card>
+  </div>
+</div>
