--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -103,10 +103,23 @@
     </button>
   </form>
   </mat-card>
-
+<mat-card>
+<mat-accordion>
+  <mat-expansion-panel (opened)="panelOpenState = true"
+                       (closed)="panelOpenState = false">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Show Areas Asigned for this Project
+      </mat-panel-title>
+      <mat-panel-description>
+        Currently I am {{panelOpenState ? 'open' : 'closed'}}
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <p>List Of Areas Asigned {{areas | json}}</p>
+  </mat-expansion-panel>
+</mat-accordion>
+</mat-card>
 </div>
-
-
 <!--<p>-->
   <!--edit-project works! {{id}}-->
 <!--</p>-->
