--- a/src/app/dwaccident-report1/dwaccident-report1.component.html
+++ b/src/app/dwaccident-report1/dwaccident-report1.component.html
@@ -1,99 +1,34 @@
 <mat-card>
-  <mat-card-header>
-    <mat-card-title><h2> Accident Report </h2></mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <mat-form-field>
-      <mat-select placeholder="DWAccident" [(ngModel)]="positionSelectedId" name="positionSelectId" >
-        <mat-option *ngFor="let dwaccident of dwaccidents" [value]="dwaccident.id" (click)="loadData(dwaccident.id)">
-          {{dwaccident.areaname}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </mat-card-content>
-  <mat-card-actions>
-  </mat-card-actions>
-</mat-card>
-
-<mat-card>
-  <mat-card-header><mat-card-title><h2>Accident Information - {{dwaccident.areaname}}</h2></mat-card-title></mat-card-header>
+  <mat-card-header><mat-card-title><h2>Datawarehouse Accidents</h2></mat-card-title></mat-card-header>
   <mat-card-content>
     <mat-list class="myTable">
       <mat-list-item class="tableHeader">
-        <div class="numberList">
-          <h3>ID</h3>
-        </div>
-        <div class="descriptionList">
-          <h3>Name</h3>
-        </div>
-        <div class="descriptionList"><h3>Recruitment Profile</h3></div>
-        <div class="descriptionList"><h3>Area</h3></div>
-        <div class="descriptionList"><h3>Performance</h3></div>
-        <div class="descriptionList"><h3>Higher Position</h3></div>
+        <div class="numberList"> <h3>area id</h3> </div>
+        <div class="descriptionList"> <h3>area name</h3></div>
+        <div class="descriptionList"><h3>position name</h3></div>
+        <div class="descriptionList"><h3>equipment name</h3></div>
+        <div class="descriptionList"><h3>employee name</h3></div>
+        <div class="descriptionList"><h3>name accidentado</h3></div>
+        <div class="descriptionList"><h3>date</h3></div>
+        <div class="descriptionList"><h3>place</h3></div>
+        <div class="descriptionList"><h3>gravity</h3></div>
+        <div class="descriptionList"><h3>description</h3></div>
+        <div class="descriptionList"><h3>type</h3></div>
       </mat-list-item>
-      <mat-list-item class="myTableRow">
-        <div class="numberList" ><h3 mat-line >{{position.id}}</h3></div>
-        <div class="descriptionList">
-          <h3>{{position.name}}</h3>
-        </div>
-        <div class="descriptionList">
-          <p *ngFor="let profile of position.profilesName" class="listProfiles">- {{profile}}</p>
-        </div>
-        <div class="descriptionList">
-          <p>{{position.areaName}}</p>
-        </div>
-        <div class="descriptionList">
-          <p>{{position.performanceName}}</p>
-        </div>
-        <div class="descriptionList">
-          <p>{{higherPosition.name}}</p>
-        </div>
-      </mat-list-item>
-      <mat-list-item class="myTableRow">
-        <h3>Purpose: </h3>
-        <div>
-          <p>{{position.purpose}}</p>
-        </div>
+      <mat-list-item *ngFor="let acc of dwaccidents" class="myTableRow">
+        <div class="numberList" ><h3 mat-line >{{acc.area_id}}</h3></div>
+        <div class="descriptionList"> <p>{{acc.areaname}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.positionname}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.equipmentname}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.equipmentbrand}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.employeeName}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.name_Accidentado}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.date}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.place}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.gravity}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.description}}</p>  </div>
+        <div class="descriptionList"> <p>{{acc.type}}</p>  </div>
       </mat-list-item>
     </mat-list>
   </mat-card-content>
 </mat-card>
-<mat-card>
-  <mat-card-header><mat-card-title><h2>Contracts for the Position</h2></mat-card-title></mat-card-header>
-  <mat-card-content>
-    <mat-list-item><h4>Number of Employees: {{total}}</h4></mat-list-item>
-    <mat-list class="myTable">
-      <mat-list-item class="tableHeader">
-        <div class="numberList">
-          <h3>Number</h3>
-        </div>
-        <div class="descriptionList">
-          <h3>Employee Name</h3>
-        </div>
-        <div class="descriptionList"><h3>Employee CI</h3></div>
-        <div class="descriptionList"><h3>Start Contract</h3></div>
-        <div class="descriptionList"><h3>End Contract</h3></div>
-        <div class="descriptionList"><h3>Salary</h3></div>
-      </mat-list-item>
-      <mat-list-item *ngFor="let empl of employees" class="myTableRow">
-        <div class="numberList" ><h3 mat-line >{{empl.numberlist}}</h3></div>
-        <div class="descriptionList">
-          <p>{{empl.nameEmpl}}</p>
-        </div>
-        <div class="descriptionList">
-          <p> {{empl.ciEmpl}}</p>
-        </div>
-        <div class="descriptionList">
-          <p>{{empl.startContract}}</p>
-        </div>
-        <div class="descriptionList">
-          <p>{{empl.endContract}}</p>
-        </div>
-        <div class="descriptionList">
-          <p>{{empl.salary}}</p>
-        </div>
-      </mat-list-item>
-    </mat-list>
-  </mat-card-content>
-</mat-card>
-
