--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,7 +38,7 @@
 
 <mat-menu #reports="matMenu">
   <button  mat-menu-item  routerLink="accident-report1"><span class="fa fa-address-card fa-lg"></span> Report 1</button>
-  <button  mat-menu-item  routerLink="accident-report2"><span class="fa fa-address-card fa-lg"></span> Report 2</button>
+  <button  mat-menu-item  routerLink="accident-report2/0"><span class="fa fa-address-card fa-lg"></span> Report 2</button>
 </mat-menu>
 
 <div class="container jumbotron"
