--- a/src/app/accident-edit-component/accident-edit-component.component.html
+++ b/src/app/accident-edit-component/accident-edit-component.component.html
@@ -3,8 +3,6 @@
 
   <form class="mat-dialog-content" (ngSubmit)="submit" #formControl="ngForm">
 
-
-
     <div class="form">
       <mat-form-field color="primary">
         <textarea matInput #input class="form-control" placeholder="Titulo Accidente" [(ngModel)]="data.nameAccidentado" name="nameAccidentado" required ></textarea>
@@ -66,7 +64,7 @@
     </div>
 
     <div mat-dialog-actions>
-      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="confirmAdd()">Save</button>
+      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="edit()">Save</button>
       <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
     </div>
   </form>
