--- a/src/app/accident-list/accident-list.component.html
+++ b/src/app/accident-list/accident-list.component.html
@@ -66,7 +66,7 @@
 
         <mat-cell *matCellDef="let row; let i=index;">
           <a class="mat-icon-button mat-primary" href="/accidente/{{row.id}}"><i class="fa fa-eye"></i> Ver</a>
-          <button mat-icon-button color="primary" (click)="edit(i, row.id)">
+          <button mat-icon-button color="primary" (click)="edit(i, row )">
             <mat-icon aria-label="Edit">edit</mat-icon> Editar
           </button>
         </mat-cell>
