--- a/src/app/accident-delete-component/accident-delete-component.component.html
+++ b/src/app/accident-delete-component/accident-delete-component.component.html
@@ -1,3 +1,15 @@
-<p>
-  accident-delete-component works!
-</p>
+<div class="container">
+  <h3 mat-dialog-title>Esta seguro de eliminar?</h3>
+  <div mat-dialog-content>
+
+    Descripcion: {{data.place_accident}}
+    <p></p>
+    Tipo Accidente: {{data.type.name_type_accident}}
+    <p></p>
+  </div>
+
+  <div mat-dialog-actions>
+    <button mat-button [mat-dialog-close]="1" (click)="confirmDelete()">Delete</button>
+    <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
+  </div>
+</div>
