--- a/src/app/components/employee-reports/employee-reports.component.html
+++ b/src/app/components/employee-reports/employee-reports.component.html
@@ -30,7 +30,7 @@
                 [data]="doughnutChartData"
                 [labels]="doughnutChartLabels"
                 [chartType]="doughnutChartType"
-                [colors]="chartColors"></canvas>
+                ></canvas>
       </div>
     </div>
   </div>
