--- a/src/app/components/employees-list/employees-list.component.html
+++ b/src/app/components/employees-list/employees-list.component.html
@@ -21,7 +21,7 @@
         <th class="employee-list-header">Ci</th>
         <th class="employee-list-header">Cargo</th>
         <th class="employee-list-header">Supervisor</th>
-
+        <th class="employee-list-header">Projecto</th>
       </tr>
     </thead>
     <tbody>
@@ -31,6 +31,7 @@
         <th  class="employee-list-item-column">{{employee.ci}}</th>
         <th  class="employee-list-item-column">{{employee.positionName}}</th>
         <th  class="employee-list-item-column">{{employee.supervisorName}}</th>
+        <th  class="employee-list-item-column">{{employee.projectName}}</th>
       </tr>
     </tbody>
   </table>
