--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
   <button mat-button [matMenuTriggerFor]="positions"><span class="fa fa-list fa-lg"></span> Position</button>
   <button mat-button [matMenuTriggerFor]="projects"><span class="fa fa-list fa-lg"></span> Projects/Areas</button>
   <a mat-button routerLink="/type-equipment"><span class="fa fa-list fa-lg"></span> Type Equipment</a>
-  <a mat-button routerLink="/employees-list" class="employees-icon"><span class="glyphicon glyphicon-book"></span> Employees</a>
+  <a mat-button routerLink="/employees-list" class="employees-icon"><span class="glyphicon glyphicon-book"></span> Empleados</a>
   <button mat-button [matMenuTriggerFor]="assignEquips"><span class="fa fa-list fa-lg"></span> Assign Equipments</button>
   <button mat-button [matMenuTriggerFor]="accidentes"><span class="fa fa-list fa-lg"></span> Accidentes</button>
   <button mat-button [matMenuTriggerFor]="reports"><span class="fa fa-list fa-lg"></span> Reports</button>
