--- a/src/app/components/employees-list/employees-list.component.html
+++ b/src/app/components/employees-list/employees-list.component.html
@@ -3,13 +3,13 @@
   <h1 class="employee-title">Lista de Empleados</h1>
 
   <button type="button" class="btn btn-default create-employees"
-          routerLink="/employee-creation-form">
+          routerLink="/employee-creation-form" id="registrar-empleado">
     Registrar nuevo empleado
     <span class="glyphicon glyphicon-plus employee-list-span"></span>
   </button>
 
   <button type="button" class="btn btn-default create-employees"
-          routerLink="/employee-reports">
+          routerLink="/employee-reports" id="reportes-empleado">
     Reportes Empleado
     <span class="glyphicon glyphicon-folder-open employee-list-span"></span>
   </button>
