--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -45,16 +45,16 @@
       <div class="form-group">
         <label for="civilState">Estado civil: </label>
         <select (change)="changeCivilState($event.target.value)"
-                [(ngModel)]="employee.civilState" [disabled]="isDisabled()">
-          <option *ngFor="let civilState of civilStates" id="civilState"
+                [(ngModel)]="employee.civilState" [disabled]="isDisabled()" id="civilState">
+          <option *ngFor="let civilState of civilStates"
                   [value]="civilState.value">{{civilState.value}}</option>
         </select>
       </div>
       <div class="form-group">
         <label for="genre">*Genero: </label>
         <select (change)="changeGenre($event.target.value)"
-                [(ngModel)]="employee.genre" [disabled]="isDisabled()">
-          <option *ngFor="let genre of genres" id="genre" [value]="genre.value">{{genre.value}}</option>
+                [(ngModel)]="employee.genre" [disabled]="isDisabled()" id="genre">
+          <option *ngFor="let genre of genres" [value]="genre.value">{{genre.value}}</option>
         </select>
       </div>
       <div class="form-group experience">
@@ -80,21 +80,21 @@
       <div class="form-group">
         <label>Cargo del empleado: </label>
         <select (change)="positionId($event.target.value)"
-                [(ngModel)]="employee.positionId" [disabled]="isDisabled()">
+                [(ngModel)]="employee.positionId" [disabled]="isDisabled()" id="positionSelector">
           <option *ngFor="let position of allPositions" [value]="position.id">{{position.name}}</option>
         </select>
       </div>
       <div class="form-group">
         <label> Supervisor: </label>
         <select (change)="supervisorId($event.target.value)" [disabled]="isDisabled()"
-                [(ngModel)]="employee.supervisorId" >
+                [(ngModel)]="employee.supervisorId" id="supervisorSelector">
           <option *ngFor="let supervisor of allSupervisor" [value]="supervisor.id">{{supervisor.firstName}} {{supervisor.lastName}}</option>
         </select>
       </div>
       <div class="form-group">
         <label> Proyecto: </label>
         <select (change)="projectId($event.target.value)" [disabled]="isDisabled()"
-                [(ngModel)]="employee.projectId" >
+                [(ngModel)]="employee.projectId" id="projectSelector">
           <option *ngFor="let project of allProjects" [value]="project.id">{{project.name}}</option>
         </select>
       </div>
