--- a/src/app/area-list/area-list.component.html
+++ b/src/app/area-list/area-list.component.html
@@ -36,11 +36,11 @@
             <mat-cell *matCellDef="let element"> {{element.detail}} </mat-cell>
           </ng-container>
 
-          <!-- column  project -->
-          <ng-container matColumnDef="project">
-            <mat-header-cell *matHeaderCellDef> project </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{ getProjectsNames(element.id_project)}} </mat-cell>
-          </ng-container>
+          <!--&lt;!&ndash; column  project &ndash;&gt;-->
+          <!--<ng-container matColumnDef="project">-->
+            <!--<mat-header-cell *matHeaderCellDef> project </mat-header-cell>-->
+            <!--<mat-cell *matCellDef="let element"> {{ getProjectsNames(element.id_project)}} </mat-cell>-->
+          <!--</ng-container>-->
 
           <!-- Options  Column -->
           <ng-container matColumnDef="options">
